--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
             <section class="feature">
                 <h3>Click a dinosaur species to cross it off the list.</h3>
-                <ol>
+                <ol class='FirstList'>
                     <li>Alocodon</li>
                     <li>Chuandongocoelurus</li>
                     <li>Patagosaurus</li>
@@ -35,7 +35,7 @@
                 </ol>
             </section>
 
-            <section class="feature">
+            <section class="SecondList">
                 <h3>Click a species to make it fade away.</h3>
                 <ul>
                     <li>Archaeopteryx</li>
@@ -56,7 +56,7 @@
                 </ul>
             </section>
 
-            <section class="feature">
+            <section class="images">
                 <h3>Click a dinosaur to watch him collapse into obscurity.</h3>
                 <section id="row">
                     <img id="triceratops" src="pictures/triceratops.jpg">
